k8s/app/app.old/namespace.yaml
# namespace.yaml
# Isolates HiveBox resources from other workloads in the cluster.
# All other manifests will be deployed into this namespace.

apiVersion: v1
kind: Namespace
metadata:
  name: hivebox
  labels:
    app: hivebox
